--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "preLaunchTask": "npm: start",
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
